--- a/aha-svtemple-final/visit.html
+++ b/aha-svtemple-final/visit.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AHA Shiva Vishnu Temple | Fitchburg, WI</title>
-  <meta name="description" content="AHA Shiva Vishnu Temple & Cultural Center — puja services, festivals, classes, facility rental, and community programs in Fitchburg, Wisconsin."/>
+  <title>Visit Us | AHA Shiva Vishnu Temple</title>
+  <meta name="description" content="Location, directions and contact information for AHA Shiva Vishnu Temple in Fitchburg, WI"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -19,20 +19,20 @@
 
   <div class="topbar">
     <div class="container nav">
-      <a class="brand" href="#top">
+      <a class="brand" href="index.html">
         <img src="assets/img/logo.png" alt="AHA Shiva Vishnu Temple logo">
         <span>AHA Shiva Vishnu Temple</span>
       </a>
       <nav>
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="darshan.html">Darshan</a></li>
           <li><a href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="donate.html">Donate</a></li>
-          <li><a href="visit.html">Visit</a></li>
+          <li><a class="active" href="visit.html">Visit</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -53,26 +53,43 @@
     </div>
   </div>
 
-  <section class="hero" id="top">
-    <div class="container wrap">
-      <div class="image"><img src="assets/img/hero.jpg" alt="AHA Shiva Vishnu Temple front view"></div>
-      <h1>Welcome to AHA Shiva Vishnu Temple</h1>
-      <p>Serving the greater Madison community with daily worship, festival celebrations, spiritual learning and community seva.</p>
-      <div class="cta">
-        <a class="btn brand" href="puja.html">Sponsor a Puja</a>
-        <a class="btn" href="visit.html">Get Directions</a>
-      </div>
-    </div>
-  </section>
-
-  <section id="about">
+  <section id="visit">
     <div class="container">
-      <div class="section-header"><h2>About the Temple</h2></div>
-      <p class="section-intro">The American Hindu Association (AHA) is a 501(c)(3) non‑profit founded in 1997 to preserve and promote Sanatana Dharma in the Madison area through worship, education, and service.</p>
+      <div class="section-header"><h2>Visit Us</h2></div>
+      <p class="section-intro">We welcome all visitors to experience the divine atmosphere of our temple. Please observe temple etiquette and remove footwear before entering the sanctum.</p>
       <div class="cards">
-        <div class="card"><span class="pill">Vision</span><h3>Lead • Serve • Celebrate</h3><p>A respected, community‑supported organization enabling families to practice Hindu values and culture.</p></div>
-        <div class="card"><span class="pill">Deities</span><h3>Shiva & Vishnu with Parivar</h3><p>Sanctums for Shiva and Vishnu with shrines for Ganesha, Durga, Hanuman and Navagrahas during festivals.</p></div>
-        <div class="card"><span class="pill">Community</span><h3>Inclusive & Volunteer‑Driven</h3><p>Run with volunteer support and donations. All are welcome to participate in pujas and cultural programs.</p></div>
+        <div class="card" style="grid-column:span 7">
+          <h3>Address</h3>
+          <p class="section-intro">AHA Shiva Vishnu Temple<br>2138 S Fish Hatchery Rd<br>Fitchburg, WI 53575</p>
+          <div class="mapbox">
+            <iframe title="Map to AHA Shiva Vishnu Temple" width="100%" height="340" style="border:0" loading="lazy" allowfullscreen
+              referrerpolicy="no-referrer-when-downgrade"
+              src="https://www.google.com/maps?q=2138%20S%20Fish%20Hatchery%20Rd%2C%20Fitchburg%2C%20WI%2053575&output=embed"></iframe>
+          </div>
+          <div style="margin-top:16px">
+            <a class="btn brand" href="https://www.google.com/maps/dir/?api=1&destination=2138+S+Fish+Hatchery+Rd,Fitchburg,WI+53575" target="_blank" rel="noopener noreferrer">Get Directions</a>
+          </div>
+        </div>
+        <div class="card" style="grid-column:span 5">
+          <h3>Contact</h3>
+          <p><strong>Temple Phone:</strong> (608) 571‑5856</p>
+          <p><strong>Email:</strong> contact.aha@aha-svtemple.org</p>
+          <p><strong>General Contact:</strong> Mr. Mogallapu S. Rao — (608) 206‑6909</p>
+          <div class="section-intro" style="margin-top:12px">Mailing: P.O. Box 628243, Middleton, WI 53562</div>
+          
+          <h3 style="margin-top:24px">Visitor Guidelines</h3>
+          <ul style="padding-left:20px;margin-top:8px">
+            <li>Remove footwear before entering the temple</li>
+            <li>Dress modestly and respectfully</li>
+            <li>Photography allowed in designated areas</li>
+            <li>Silence mobile phones inside sanctum</li>
+            <li>Follow priest instructions during pujas</li>
+          </ul>
+        </div>
+      </div>
+      <div class="cta" style="margin-top:32px">
+        <a class="btn brand" href="timings.html">View Temple Timings</a>
+        <a class="btn" href="contact.html">Send a Message</a>
       </div>
     </div>
   </section>
