--- a/aha-svtemple-final/contact.html
+++ b/aha-svtemple-final/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AHA Shiva Vishnu Temple | Fitchburg, WI</title>
-  <meta name="description" content="AHA Shiva Vishnu Temple & Cultural Center — puja services, festivals, classes, facility rental, and community programs in Fitchburg, Wisconsin."/>
+  <title>Contact Us | AHA Shiva Vishnu Temple</title>
+  <meta name="description" content="Contact AHA Shiva Vishnu Temple in Fitchburg, WI - Send us a message or call for information"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -19,21 +19,21 @@
 
   <div class="topbar">
     <div class="container nav">
-      <a class="brand" href="#top">
+      <a class="brand" href="index.html">
         <img src="assets/img/logo.png" alt="AHA Shiva Vishnu Temple logo">
         <span>AHA Shiva Vishnu Temple</span>
       </a>
       <nav>
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="darshan.html">Darshan</a></li>
           <li><a href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="donate.html">Donate</a></li>
           <li><a href="visit.html">Visit</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -53,26 +53,33 @@
     </div>
   </div>
 
-  <section class="hero" id="top">
-    <div class="container wrap">
-      <div class="image"><img src="assets/img/hero.jpg" alt="AHA Shiva Vishnu Temple front view"></div>
-      <h1>Welcome to AHA Shiva Vishnu Temple</h1>
-      <p>Serving the greater Madison community with daily worship, festival celebrations, spiritual learning and community seva.</p>
-      <div class="cta">
-        <a class="btn brand" href="puja.html">Sponsor a Puja</a>
-        <a class="btn" href="visit.html">Get Directions</a>
-      </div>
-    </div>
-  </section>
-
-  <section id="about">
+  <section id="contact" class="band">
     <div class="container">
-      <div class="section-header"><h2>About the Temple</h2></div>
-      <p class="section-intro">The American Hindu Association (AHA) is a 501(c)(3) non‑profit founded in 1997 to preserve and promote Sanatana Dharma in the Madison area through worship, education, and service.</p>
+      <div class="section-header"><h2>Send a Message</h2></div>
+      <p class="section-intro">Have questions about temple services, events, or donations? We'd love to hear from you. Fill out the form below and we'll get back to you as soon as possible.</p>
       <div class="cards">
-        <div class="card"><span class="pill">Vision</span><h3>Lead • Serve • Celebrate</h3><p>A respected, community‑supported organization enabling families to practice Hindu values and culture.</p></div>
-        <div class="card"><span class="pill">Deities</span><h3>Shiva & Vishnu with Parivar</h3><p>Sanctums for Shiva and Vishnu with shrines for Ganesha, Durga, Hanuman and Navagrahas during festivals.</p></div>
-        <div class="card"><span class="pill">Community</span><h3>Inclusive & Volunteer‑Driven</h3><p>Run with volunteer support and donations. All are welcome to participate in pujas and cultural programs.</p></div>
+        <div class="card" style="grid-column:span 8">
+          <form class="flow" onsubmit="sendMail(event)">
+            <div style="display:grid;grid-template-columns:1fr 1fr;gap:12px">
+              <label><span class="sr">Name</span><input required name="name" placeholder="Your name" style="width:100%;padding:12px 14px;border-radius:12px;border:1px solid var(--line)"/></label>
+              <label><span class="sr">Email</span><input required name="email" type="email" placeholder="you@email.com" style="width:100%;padding:12px 14px;border-radius:12px;border:1px solid var(--line)"/></label>
+            </div>
+            <label><span class="sr">Phone (Optional)</span><input name="phone" type="tel" placeholder="Phone number (optional)" style="width:100%;padding:12px 14px;border-radius:12px;border:1px solid var(--line)"/></label>
+            <label><span class="sr">Message</span><textarea required name="message" rows="5" placeholder="How can we help?" style="width:100%;padding:12px 14px;border-radius:12px;border:1px solid var(--line)"></textarea></label>
+            <button class="btn brand" type="submit">Email the Temple</button>
+            <small class="muted">This opens your email client with a pre‑filled message.</small>
+          </form>
+        </div>
+        <div class="card" style="grid-column:span 4">
+          <h3>Contact Information</h3>
+          <p><strong>Temple Phone:</strong><br>(608) 571‑5856</p>
+          <p><strong>Email:</strong><br>contact.aha@aha-svtemple.org</p>
+          <p><strong>General Contact:</strong><br>Mr. Mogallapu S. Rao<br>(608) 206‑6909</p>
+          
+          <h3 style="margin-top:24px">Temple Hours</h3>
+          <p>Open daily except Wednesdays<br>Morning: 9 AM - 12 PM<br>Evening: 5 PM - 8 PM</p>
+          <a class="btn" href="timings.html" style="margin-top:12px;display:inline-block">Full Schedule</a>
+        </div>
       </div>
     </div>
   </section>
