--- a/aha-svtemple-final/darshan.html
+++ b/aha-svtemple-final/darshan.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AHA Shiva Vishnu Temple | Fitchburg, WI</title>
-  <meta name="description" content="AHA Shiva Vishnu Temple & Cultural Center — puja services, festivals, classes, facility rental, and community programs in Fitchburg, Wisconsin."/>
+  <title>Daily Darshan | AHA Shiva Vishnu Temple</title>
+  <meta name="description" content="Daily darshan timings and deity photos at AHA Shiva Vishnu Temple, Fitchburg, WI"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -19,15 +19,15 @@
 
   <div class="topbar">
     <div class="container nav">
-      <a class="brand" href="#top">
+      <a class="brand" href="index.html">
         <img src="assets/img/logo.png" alt="AHA Shiva Vishnu Temple logo">
         <span>AHA Shiva Vishnu Temple</span>
       </a>
       <nav>
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="darshan.html">Darshan</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="darshan.html">Darshan</a></li>
           <li><a href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
           <li><a href="events.html">Events</a></li>
@@ -53,26 +53,27 @@
     </div>
   </div>
 
-  <section class="hero" id="top">
-    <div class="container wrap">
-      <div class="image"><img src="assets/img/hero.jpg" alt="AHA Shiva Vishnu Temple front view"></div>
-      <h1>Welcome to AHA Shiva Vishnu Temple</h1>
-      <p>Serving the greater Madison community with daily worship, festival celebrations, spiritual learning and community seva.</p>
-      <div class="cta">
-        <a class="btn brand" href="puja.html">Sponsor a Puja</a>
-        <a class="btn" href="visit.html">Get Directions</a>
-      </div>
-    </div>
-  </section>
-
-  <section id="about">
+  <section id="darshan" class="band">
     <div class="container">
-      <div class="section-header"><h2>About the Temple</h2></div>
-      <p class="section-intro">The American Hindu Association (AHA) is a 501(c)(3) non‑profit founded in 1997 to preserve and promote Sanatana Dharma in the Madison area through worship, education, and service.</p>
-      <div class="cards">
-        <div class="card"><span class="pill">Vision</span><h3>Lead • Serve • Celebrate</h3><p>A respected, community‑supported organization enabling families to practice Hindu values and culture.</p></div>
-        <div class="card"><span class="pill">Deities</span><h3>Shiva & Vishnu with Parivar</h3><p>Sanctums for Shiva and Vishnu with shrines for Ganesha, Durga, Hanuman and Navagrahas during festivals.</p></div>
-        <div class="card"><span class="pill">Community</span><h3>Inclusive & Volunteer‑Driven</h3><p>Run with volunteer support and donations. All are welcome to participate in pujas and cultural programs.</p></div>
+      <div class="section-header"><h2>Daily Darshan</h2></div>
+      <p class="section-intro">Experience the divine presence of our deities. The temple offers daily darshan during morning and evening hours. Photography is permitted in designated areas.</p>
+      <div class="slider">
+        <div class="slides">
+          <div class="slide"><img src="assets/img/slide1.jpg" alt="Darshan 1"></div>
+          <div class="slide"><img src="assets/img/slide2.jpg" alt="Darshan 2"></div>
+          <div class="slide"><img src="assets/img/slide3.jpg" alt="Darshan 3"></div>
+        </div>
+        <button class="navbtn prev" aria-label="Previous">‹</button>
+        <button class="navbtn next" aria-label="Next">›</button>
+        <div class="dots">
+          <button class="dot" aria-label="Slide 1"></button>
+          <button class="dot" aria-label="Slide 2"></button>
+          <button class="dot" aria-label="Slide 3"></button>
+        </div>
+      </div>
+      <div class="cta" style="margin-top:32px">
+        <a class="btn brand" href="timings.html">View Temple Timings</a>
+        <a class="btn" href="visit.html">Get Directions</a>
       </div>
     </div>
   </section>
