--- a/aha-svtemple-final/donate.html
+++ b/aha-svtemple-final/donate.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AHA Shiva Vishnu Temple | Fitchburg, WI</title>
-  <meta name="description" content="AHA Shiva Vishnu Temple & Cultural Center — puja services, festivals, classes, facility rental, and community programs in Fitchburg, Wisconsin."/>
+  <title>Support the Temple | AHA Shiva Vishnu Temple</title>
+  <meta name="description" content="Donate to AHA Shiva Vishnu Temple - a 501(c)(3) non-profit organization in Fitchburg, WI"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -19,19 +19,19 @@
 
   <div class="topbar">
     <div class="container nav">
-      <a class="brand" href="#top">
+      <a class="brand" href="index.html">
         <img src="assets/img/logo.png" alt="AHA Shiva Vishnu Temple logo">
         <span>AHA Shiva Vishnu Temple</span>
       </a>
       <nav>
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="darshan.html">Darshan</a></li>
           <li><a href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
           <li><a href="events.html">Events</a></li>
-          <li><a href="donate.html">Donate</a></li>
+          <li><a class="active" href="donate.html">Donate</a></li>
           <li><a href="visit.html">Visit</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -53,26 +53,40 @@
     </div>
   </div>
 
-  <section class="hero" id="top">
-    <div class="container wrap">
-      <div class="image"><img src="assets/img/hero.jpg" alt="AHA Shiva Vishnu Temple front view"></div>
-      <h1>Welcome to AHA Shiva Vishnu Temple</h1>
-      <p>Serving the greater Madison community with daily worship, festival celebrations, spiritual learning and community seva.</p>
-      <div class="cta">
-        <a class="btn brand" href="puja.html">Sponsor a Puja</a>
-        <a class="btn" href="visit.html">Get Directions</a>
-      </div>
-    </div>
-  </section>
-
-  <section id="about">
+  <section id="donate" class="band">
     <div class="container">
-      <div class="section-header"><h2>About the Temple</h2></div>
-      <p class="section-intro">The American Hindu Association (AHA) is a 501(c)(3) non‑profit founded in 1997 to preserve and promote Sanatana Dharma in the Madison area through worship, education, and service.</p>
+      <div class="section-header"><h2>Support the Temple</h2></div>
+      <p class="section-intro">AHA is a 501(c)(3) non‑profit organization. Donations are tax‑deductible as allowed by law. Your generous contributions help us maintain the temple, conduct daily pujas, celebrate festivals, and serve the community.</p>
+      
       <div class="cards">
-        <div class="card"><span class="pill">Vision</span><h3>Lead • Serve • Celebrate</h3><p>A respected, community‑supported organization enabling families to practice Hindu values and culture.</p></div>
-        <div class="card"><span class="pill">Deities</span><h3>Shiva & Vishnu with Parivar</h3><p>Sanctums for Shiva and Vishnu with shrines for Ganesha, Durga, Hanuman and Navagrahas during festivals.</p></div>
-        <div class="card"><span class="pill">Community</span><h3>Inclusive & Volunteer‑Driven</h3><p>Run with volunteer support and donations. All are welcome to participate in pujas and cultural programs.</p></div>
+        <div class="card">
+          <span class="pill">General Donation</span>
+          <h3>Temple Maintenance & Operations</h3>
+          <p>Support daily temple operations, utilities, maintenance, and priest services. Your contribution helps keep the temple open for daily worship.</p>
+        </div>
+        <div class="card">
+          <span class="pill">Festival Sponsorship</span>
+          <h3>Major Festival Celebrations</h3>
+          <p>Sponsor major festivals like Mahashivaratri, Janmashtami, Navaratri, Diwali and more. Help bring the community together in celebration.</p>
+        </div>
+        <div class="card">
+          <span class="pill">Building Fund</span>
+          <h3>Temple Development</h3>
+          <p>Contribute to temple expansion, renovation projects, and infrastructure improvements for the growing community needs.</p>
+        </div>
+      </div>
+
+      <div class="cta" style="margin-top:32px;display:flex;gap:12px;flex-wrap:wrap">
+        <a class="btn brand" href="contact.html">Make a Donation</a>
+        <a class="btn" href="puja.html">Sponsor a Puja</a>
+      </div>
+
+      <div style="margin-top:48px;padding:24px;background:var(--off);border-radius:16px">
+        <h3 style="margin-bottom:12px">How to Donate</h3>
+        <p style="margin-bottom:12px"><strong>By Check:</strong> Make checks payable to "American Hindu Association" and mail to:<br>
+        P.O. Box 628243, Middleton, WI 53562</p>
+        <p style="margin-bottom:12px"><strong>In Person:</strong> Visit the temple during open hours to make your donation.</p>
+        <p><strong>Contact us</strong> for information about online donation options, recurring donations, or to discuss larger contributions.</p>
       </div>
     </div>
   </section>
