--- a/aha-svtemple-final/events.html
+++ b/aha-svtemple-final/events.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AHA Shiva Vishnu Temple | Fitchburg, WI</title>
-  <meta name="description" content="AHA Shiva Vishnu Temple & Cultural Center — puja services, festivals, classes, facility rental, and community programs in Fitchburg, Wisconsin."/>
+  <title>Festivals & Events | AHA Shiva Vishnu Temple</title>
+  <meta name="description" content="Hindu festivals, cultural programs and community events at AHA Shiva Vishnu Temple, Fitchburg, WI"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -19,18 +19,18 @@
 
   <div class="topbar">
     <div class="container nav">
-      <a class="brand" href="#top">
+      <a class="brand" href="index.html">
         <img src="assets/img/logo.png" alt="AHA Shiva Vishnu Temple logo">
         <span>AHA Shiva Vishnu Temple</span>
       </a>
       <nav>
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="darshan.html">Darshan</a></li>
           <li><a href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a class="active" href="events.html">Events</a></li>
           <li><a href="donate.html">Donate</a></li>
           <li><a href="visit.html">Visit</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -53,26 +53,21 @@
     </div>
   </div>
 
-  <section class="hero" id="top">
-    <div class="container wrap">
-      <div class="image"><img src="assets/img/hero.jpg" alt="AHA Shiva Vishnu Temple front view"></div>
-      <h1>Welcome to AHA Shiva Vishnu Temple</h1>
-      <p>Serving the greater Madison community with daily worship, festival celebrations, spiritual learning and community seva.</p>
-      <div class="cta">
-        <a class="btn brand" href="puja.html">Sponsor a Puja</a>
-        <a class="btn" href="visit.html">Get Directions</a>
-      </div>
-    </div>
-  </section>
-
-  <section id="about">
+  <section id="events">
     <div class="container">
-      <div class="section-header"><h2>About the Temple</h2></div>
-      <p class="section-intro">The American Hindu Association (AHA) is a 501(c)(3) non‑profit founded in 1997 to preserve and promote Sanatana Dharma in the Madison area through worship, education, and service.</p>
+      <div class="section-header"><h2>Festivals & Events</h2></div>
+      <p class="section-intro">Join us in celebrating major Hindu festivals and cultural programs throughout the year. All community members are welcome to participate.</p>
       <div class="cards">
-        <div class="card"><span class="pill">Vision</span><h3>Lead • Serve • Celebrate</h3><p>A respected, community‑supported organization enabling families to practice Hindu values and culture.</p></div>
-        <div class="card"><span class="pill">Deities</span><h3>Shiva & Vishnu with Parivar</h3><p>Sanctums for Shiva and Vishnu with shrines for Ganesha, Durga, Hanuman and Navagrahas during festivals.</p></div>
-        <div class="card"><span class="pill">Community</span><h3>Inclusive & Volunteer‑Driven</h3><p>Run with volunteer support and donations. All are welcome to participate in pujas and cultural programs.</p></div>
+        <div class="card"><span class="pill">Mahashivaratri</span><h3>All‑Night Puja</h3><p>Multiple kala pujas, bhajans and darshan through the night. Experience the sacred nightlong vigil with special prayers and offerings to Lord Shiva.</p></div>
+        <div class="card"><span class="pill">Janmashtami</span><h3>Krishna Utsav</h3><p>Special alankaram, bhajans and kids' activities. Celebrate the birth of Lord Krishna with midnight celebrations, devotional songs, and swinging of the cradle.</p></div>
+        <div class="card"><span class="pill">Navaratri</span><h3>Devi Celebrations</h3><p>Daily evening pujas, Lalitha sahasranamam, and cultural programs. Nine nights dedicated to the Divine Mother with special decorations, dandiya raas, and garba.</p></div>
+        <div class="card"><span class="pill">Ganesh Chaturthi</span><h3>Lord Ganesha Festival</h3><p>Special pujas and offerings to Lord Ganesha. Cultural programs, prasadam distribution, and community celebrations.</p></div>
+        <div class="card"><span class="pill">Diwali</span><h3>Festival of Lights</h3><p>Lakshmi puja, diyas lighting, and community gathering. Celebrate the victory of light over darkness with prayers, sweets, and festivities.</p></div>
+        <div class="card"><span class="pill">Community Programs</span><h3>Cultural Classes & Events</h3><p>Regular yoga classes, Sanskrit learning, classical music and dance workshops for children and adults. Check with the temple for current schedule.</p></div>
+      </div>
+      <div class="cta" style="margin-top:32px">
+        <a class="btn brand" href="contact.html">Stay Updated</a>
+        <a class="btn" href="puja.html">Sponsor Festival Puja</a>
       </div>
     </div>
   </section>
