--- a/aha-svtemple-final/puja.html
+++ b/aha-svtemple-final/puja.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AHA Shiva Vishnu Temple | Fitchburg, WI</title>
-  <meta name="description" content="AHA Shiva Vishnu Temple & Cultural Center — puja services, festivals, classes, facility rental, and community programs in Fitchburg, Wisconsin."/>
+  <title>Puja & Sevas | AHA Shiva Vishnu Temple</title>
+  <meta name="description" content="Sponsor pujas, abhishekams, archanas and priest services at AHA Shiva Vishnu Temple, Fitchburg, WI"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -19,16 +19,16 @@
 
   <div class="topbar">
     <div class="container nav">
-      <a class="brand" href="#top">
+      <a class="brand" href="index.html">
         <img src="assets/img/logo.png" alt="AHA Shiva Vishnu Temple logo">
         <span>AHA Shiva Vishnu Temple</span>
       </a>
       <nav>
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="darshan.html">Darshan</a></li>
-          <li><a href="puja.html">Puja & Sevas</a></li>
+          <li><a class="active" href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="donate.html">Donate</a></li>
@@ -53,26 +53,18 @@
     </div>
   </div>
 
-  <section class="hero" id="top">
-    <div class="container wrap">
-      <div class="image"><img src="assets/img/hero.jpg" alt="AHA Shiva Vishnu Temple front view"></div>
-      <h1>Welcome to AHA Shiva Vishnu Temple</h1>
-      <p>Serving the greater Madison community with daily worship, festival celebrations, spiritual learning and community seva.</p>
-      <div class="cta">
-        <a class="btn brand" href="puja.html">Sponsor a Puja</a>
-        <a class="btn" href="visit.html">Get Directions</a>
-      </div>
-    </div>
-  </section>
-
-  <section id="about">
+  <section id="puja">
     <div class="container">
-      <div class="section-header"><h2>About the Temple</h2></div>
-      <p class="section-intro">The American Hindu Association (AHA) is a 501(c)(3) non‑profit founded in 1997 to preserve and promote Sanatana Dharma in the Madison area through worship, education, and service.</p>
+      <div class="section-header"><h2>Puja & Sevas</h2><a class="btn brand" href="donate.html">Sponsor</a></div>
+      <p class="section-intro">Participate in daily and special pujas at the temple. Contact us to schedule your seva or for priest services.</p>
       <div class="cards">
-        <div class="card"><span class="pill">Vision</span><h3>Lead • Serve • Celebrate</h3><p>A respected, community‑supported organization enabling families to practice Hindu values and culture.</p></div>
-        <div class="card"><span class="pill">Deities</span><h3>Shiva & Vishnu with Parivar</h3><p>Sanctums for Shiva and Vishnu with shrines for Ganesha, Durga, Hanuman and Navagrahas during festivals.</p></div>
-        <div class="card"><span class="pill">Community</span><h3>Inclusive & Volunteer‑Driven</h3><p>Run with volunteer support and donations. All are welcome to participate in pujas and cultural programs.</p></div>
+        <div class="card"><span class="pill">Abhishekam</span><h3>Monthly Abhishekams</h3><p>Sponsor abhishekams for Shiva, Vishnu and Parivar deities. Monthly abhishekams are performed with sacred waters, milk, honey, and other sacred items while chanting vedic mantras.</p></div>
+        <div class="card"><span class="pill">Archana</span><h3>Daily/Weekly Archana</h3><p>Offer archana for special days, birthdays and anniversaries. Archanas can be performed in person or on your behalf with 108 or 1008 names of the deity.</p></div>
+        <div class="card"><span class="pill">Priest Services</span><h3>Private Puja / Weddings</h3><p>Priest services at the temple or your home for samskaras, homams, grihapravesham, weddings, etc. Contact us to discuss your requirements and schedule.</p></div>
+      </div>
+      <div class="cta" style="margin-top:32px">
+        <a class="btn brand" href="contact.html">Contact Us</a>
+        <a class="btn" href="donate.html">Make a Donation</a>
       </div>
     </div>
   </section>
