--- a/aha-svtemple-final/donate.html
+++ b/aha-svtemple-final/donate.html
@@ -27,7 +27,6 @@
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="darshan.html">Darshan</a></li>
           <li><a href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
           <li><a href="events.html">Events</a></li>
@@ -41,7 +40,6 @@
       <nav style="background:#fff;border:1px solid var(--line);border-radius:16px;padding:8px;box-shadow:var(--shadow);margin-bottom:10px">
         <ul style="list-style:none;margin:0;padding:0;display:grid;gap:6px">
           <li><a class="btn" href="index.html">Home</a></li>
-          <li><a class="btn" href="darshan.html">Darshan</a></li>
           <li><a class="btn" href="puja.html">Puja & Sevas</a></li>
           <li><a class="btn" href="timings.html">Timings</a></li>
           <li><a class="btn" href="events.html">Events</a></li>
@@ -83,10 +81,24 @@
 
       <div style="margin-top:48px;padding:24px;background:var(--off);border-radius:16px">
         <h3 style="margin-bottom:12px">How to Donate</h3>
+        <p style="margin-bottom:12px"><strong>Online via Credit Card:</strong> AHA has partnered with <strong>Network for Good</strong> to process secure credit card payments for pujas and donations. Your transaction will appear as "Network for Good" on your credit card statement. Contact us for the payment link.</p>
         <p style="margin-bottom:12px"><strong>By Check:</strong> Make checks payable to "American Hindu Association" and mail to:<br>
         P.O. Box 628243, Middleton, WI 53562</p>
         <p style="margin-bottom:12px"><strong>In Person:</strong> Visit the temple during open hours to make your donation.</p>
         <p><strong>Contact us</strong> for information about online donation options, recurring donations, or to discuss larger contributions.</p>
+      </div>
+
+      <div style="margin-top:32px;padding:24px;background:#fff;border:2px solid var(--line);border-radius:16px">
+        <h3 style="margin-bottom:12px">🛒 Support AHA While Shopping on Amazon</h3>
+        <p style="margin-bottom:12px">When you shop at <strong>AmazonSmile</strong>, Amazon will make a donation to American Hindu Association at no cost to you. Simply start your shopping at smile.amazon.com and select "American Hindu Association" as your charity.</p>
+        <p style="margin-bottom:12px">It's the same Amazon you know — same products, same prices, same service — but Amazon donates 0.5% of eligible purchases to AHA!</p>
+        <a class="btn brand" href="https://smile.amazon.com" target="_blank" rel="noopener noreferrer">Shop AmazonSmile</a>
+      </div>
+
+      <div style="margin-top:32px;padding:24px;background:var(--off);border-radius:16px">
+        <h3 style="margin-bottom:12px">📋 AHA Expense Reimbursement</h3>
+        <p style="margin-bottom:12px">Have an official AHA expense that you need reimbursed? Download the Reimbursement Form and submit the completed form to the AHA Treasurer.</p>
+        <a class="btn" href="contact.html">Contact for Reimbursement Form</a>
       </div>
     </div>
   </section>
@@ -98,17 +110,20 @@
           <img src="assets/img/logo.png" alt="AHA logo small"><span>AHA Shiva Vishnu Temple</span>
         </div>
         <p>Hindu Temple & Cultural Center • Fitchburg, Wisconsin</p>
+        <p style="margin-top:12px"><strong>Temple Priest:</strong> Pt. Sudhakar Sharma</p>
       </div>
       <div>
         <h4>Visit</h4>
         <p class="muted">2138 S Fish Hatchery Rd<br>Fitchburg, WI 53575</p>
+        <p class="muted" style="margin-top:8px"><strong>Hours:</strong> Mon-Tue, Thu-Fri 9AM-12PM & 5PM-8PM<br>Sat-Sun 9AM-1PM & 5PM-8PM<br>Closed Wednesdays</p>
       </div>
       <div>
         <h4>Connect</h4>
-        <p class="muted">(608) 571‑5856 • contact.aha@aha-svtemple.org<br>Facebook: @ahamadison</p>
+        <p class="muted">(608) 571‑5856<br>contact.aha@aha-svtemple.org</p>
+        <p class="muted" style="margin-top:8px"><a href="https://www.facebook.com/ahamadison" target="_blank" rel="noopener" style="color:inherit;text-decoration:underline">Facebook: @ahamadison</a></p>
       </div>
     </div>
-    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA)</div>
+    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA) • Website Designed by Ms. Narisha Reddy</div>
   </footer>
 
   <script src="assets/js/main.js"></script>
