--- a/aha-svtemple-final/index.html
+++ b/aha-svtemple-final/index.html
@@ -27,7 +27,6 @@
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="darshan.html">Darshan</a></li>
           <li><a href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
           <li><a href="events.html">Events</a></li>
@@ -41,7 +40,6 @@
       <nav style="background:#fff;border:1px solid var(--line);border-radius:16px;padding:8px;box-shadow:var(--shadow);margin-bottom:10px">
         <ul style="list-style:none;margin:0;padding:0;display:grid;gap:6px">
           <li><a class="btn" href="index.html">Home</a></li>
-          <li><a class="btn" href="darshan.html">Darshan</a></li>
           <li><a class="btn" href="puja.html">Puja & Sevas</a></li>
           <li><a class="btn" href="timings.html">Timings</a></li>
           <li><a class="btn" href="events.html">Events</a></li>
@@ -77,6 +75,70 @@
     </div>
   </section>
 
+  <section id="quicklinks" class="band">
+    <div class="container">
+      <div class="section-header"><h2>Quick Links</h2></div>
+      <div class="cards">
+        <div class="card">
+          <h3>📧 Weekly Updates</h3>
+          <p>Subscribe to AHA weekly emails for temple news, events, and festival announcements.</p>
+          <a class="btn brand" href="contact.html">Subscribe Now</a>
+        </div>
+        <div class="card">
+          <h3>🙏 Request Services</h3>
+          <p>Request puja or wedding services at the temple or your home with our priest.</p>
+          <a class="btn brand" href="puja.html">Book Services</a>
+        </div>
+        <div class="card">
+          <h3>🧘 Yoga Program</h3>
+          <p>AHA offers regular yoga classes for all ages. Contact us for current schedule and registration.</p>
+          <a class="btn brand" href="events.html">Learn More</a>
+        </div>
+        <div class="card">
+          <h3>📚 AHA Gurukulam</h3>
+          <p><strong>Sundays 10:30 AM – 11:30 AM</strong><br>Spiritual & cultural education for children age 6 and over. Learn Hindu values, Sanskrit, bhajans, and traditions.</p>
+          <a class="btn brand" href="contact.html">Enroll Your Child</a>
+        </div>
+        <div class="card">
+          <h3>🎪 Equipment Rental</h3>
+          <p>Need tents, tables, or chairs for your family gathering? AHA members can rent party equipment.</p>
+          <a class="btn brand" href="contact.html">View Rental Info</a>
+        </div>
+        <div class="card">
+          <h3>🏛️ Facility Rental</h3>
+          <p>Rent AHA onsite facilities for your events, celebrations, and community gatherings.</p>
+          <a class="btn brand" href="contact.html">Inquire Now</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="programs">
+    <div class="container">
+      <div class="section-header"><h2>Temple Programs & Services</h2></div>
+      <div class="cards">
+        <div class="card">
+          <span class="pill">Priest Services</span>
+          <h3>Pt. Sudhakar Sharma</h3>
+          <p>Our temple priest is available for pujas, weddings, grihapravesham, upanayanam, and other religious ceremonies at the temple or your home.</p>
+          <a class="btn" href="puja.html">Request Service</a>
+        </div>
+        <div class="card">
+          <span class="pill">Festival Sponsorships</span>
+          <h3>Maha Shivarathri & Annual Abhishekam</h3>
+          <p>Sponsor major temple festivals and annual abhishekams. Includes Shiva Parvathi Kalyanam and other special pujas.</p>
+          <a class="btn" href="puja.html">Register to Sponsor</a>
+        </div>
+        <div class="card">
+          <span class="pill">Puja Items</span>
+          <h3>Temple Prasadam & Supplies</h3>
+          <p>Puja items, prasadam, and temple supplies are available at the temple office during open hours.</p>
+          <a class="btn" href="contact.html">View Items List</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <footer>
     <div class="container footgrid">
       <div>
@@ -84,17 +146,20 @@
           <img src="assets/img/logo.png" alt="AHA logo small"><span>AHA Shiva Vishnu Temple</span>
         </div>
         <p>Hindu Temple & Cultural Center • Fitchburg, Wisconsin</p>
+        <p style="margin-top:12px"><strong>Temple Priest:</strong> Pt. Sudhakar Sharma</p>
       </div>
       <div>
         <h4>Visit</h4>
         <p class="muted">2138 S Fish Hatchery Rd<br>Fitchburg, WI 53575</p>
+        <p class="muted" style="margin-top:8px"><strong>Hours:</strong> Mon-Tue, Thu-Fri 9AM-12PM & 5PM-8PM<br>Sat-Sun 9AM-1PM & 5PM-8PM<br>Closed Wednesdays</p>
       </div>
       <div>
         <h4>Connect</h4>
-        <p class="muted">(608) 571‑5856 • contact.aha@aha-svtemple.org<br>Facebook: @ahamadison</p>
+        <p class="muted">(608) 571‑5856<br>contact.aha@aha-svtemple.org</p>
+        <p class="muted" style="margin-top:8px"><a href="https://www.facebook.com/ahamadison" target="_blank" rel="noopener" style="color:inherit;text-decoration:underline">Facebook: @ahamadison</a></p>
       </div>
     </div>
-    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA)</div>
+    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA) • Website Designed by Ms. Narisha Reddy</div>
   </footer>
 
   <script src="assets/js/main.js"></script>
