--- a/aha-svtemple-final/visit.html
+++ b/aha-svtemple-final/visit.html
@@ -27,7 +27,6 @@
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="darshan.html">Darshan</a></li>
           <li><a href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
           <li><a href="events.html">Events</a></li>
@@ -41,7 +40,6 @@
       <nav style="background:#fff;border:1px solid var(--line);border-radius:16px;padding:8px;box-shadow:var(--shadow);margin-bottom:10px">
         <ul style="list-style:none;margin:0;padding:0;display:grid;gap:6px">
           <li><a class="btn" href="index.html">Home</a></li>
-          <li><a class="btn" href="darshan.html">Darshan</a></li>
           <li><a class="btn" href="puja.html">Puja & Sevas</a></li>
           <li><a class="btn" href="timings.html">Timings</a></li>
           <li><a class="btn" href="events.html">Events</a></li>
@@ -101,17 +99,20 @@
           <img src="assets/img/logo.png" alt="AHA logo small"><span>AHA Shiva Vishnu Temple</span>
         </div>
         <p>Hindu Temple & Cultural Center • Fitchburg, Wisconsin</p>
+        <p style="margin-top:12px"><strong>Temple Priest:</strong> Pt. Sudhakar Sharma</p>
       </div>
       <div>
         <h4>Visit</h4>
         <p class="muted">2138 S Fish Hatchery Rd<br>Fitchburg, WI 53575</p>
+        <p class="muted" style="margin-top:8px"><strong>Hours:</strong> Mon-Tue, Thu-Fri 9AM-12PM & 5PM-8PM<br>Sat-Sun 9AM-1PM & 5PM-8PM<br>Closed Wednesdays</p>
       </div>
       <div>
         <h4>Connect</h4>
-        <p class="muted">(608) 571‑5856 • contact.aha@aha-svtemple.org<br>Facebook: @ahamadison</p>
+        <p class="muted">(608) 571‑5856<br>contact.aha@aha-svtemple.org</p>
+        <p class="muted" style="margin-top:8px"><a href="https://www.facebook.com/ahamadison" target="_blank" rel="noopener" style="color:inherit;text-decoration:underline">Facebook: @ahamadison</a></p>
       </div>
     </div>
-    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA)</div>
+    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA) • Website Designed by Ms. Narisha Reddy</div>
   </footer>
 
   <script src="assets/js/main.js"></script>
