--- a/aha-svtemple-final/contact.html
+++ b/aha-svtemple-final/contact.html
@@ -27,7 +27,6 @@
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="darshan.html">Darshan</a></li>
           <li><a href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
           <li><a href="events.html">Events</a></li>
@@ -41,7 +40,6 @@
       <nav style="background:#fff;border:1px solid var(--line);border-radius:16px;padding:8px;box-shadow:var(--shadow);margin-bottom:10px">
         <ul style="list-style:none;margin:0;padding:0;display:grid;gap:6px">
           <li><a class="btn" href="index.html">Home</a></li>
-          <li><a class="btn" href="darshan.html">Darshan</a></li>
           <li><a class="btn" href="puja.html">Puja & Sevas</a></li>
           <li><a class="btn" href="timings.html">Timings</a></li>
           <li><a class="btn" href="events.html">Events</a></li>
@@ -79,6 +77,54 @@
           <h3 style="margin-top:24px">Temple Hours</h3>
           <p>Open daily except Wednesdays<br>Morning: 9 AM - 12 PM<br>Evening: 5 PM - 8 PM</p>
           <a class="btn" href="timings.html" style="margin-top:12px;display:inline-block">Full Schedule</a>
+          
+          <h3 style="margin-top:24px">Temple Priest</h3>
+          <p><strong>Pt. Sudhakar Sharma</strong><br>Available for puja services, weddings, and ceremonies at temple or home</p>
+        </div>
+      </div>
+
+      <div style="margin-top:48px">
+        <h2 style="margin-bottom:24px">Additional Services</h2>
+        <div class="cards">
+          <div class="card">
+            <span class="pill">Equipment Rental</span>
+            <h3>🎪 Party Equipment Checkout</h3>
+            <p>Need tents, tables, chairs, or other equipment for your next family gathering? AHA offers equipment rental services to community members.</p>
+            <p style="margin-top:12px">Available equipment includes:</p>
+            <ul style="padding-left:20px;margin-top:8px">
+              <li>Tents and canopies</li>
+              <li>Tables (various sizes)</li>
+              <li>Folding chairs</li>
+              <li>And more party supplies</li>
+            </ul>
+            <p style="margin-top:12px"><strong>Contact us for rental charges and registration form.</strong></p>
+          </div>
+          <div class="card">
+            <span class="pill">Facility Rental</span>
+            <h3>🏛️ AHA Onsite Facilities Rental</h3>
+            <p>Rent AHA temple facilities for your special events, celebrations, cultural programs, and community gatherings.</p>
+            <p style="margin-top:12px">Perfect for:</p>
+            <ul style="padding-left:20px;margin-top:8px">
+              <li>Birthday celebrations</li>
+              <li>Anniversary parties</li>
+              <li>Cultural events and programs</li>
+              <li>Community meetings</li>
+            </ul>
+            <p style="margin-top:12px"><strong>Contact us for availability, rates, and booking information.</strong></p>
+          </div>
+          <div class="card">
+            <span class="pill">Stay Connected</span>
+            <h3>📧 Subscribe to AHA Weekly Emails</h3>
+            <p>Stay informed about temple activities, upcoming festivals, special events, and community announcements.</p>
+            <p style="margin-top:12px">Receive updates about:</p>
+            <ul style="padding-left:20px;margin-top:8px">
+              <li>Festival schedules and sponsorship opportunities</li>
+              <li>Temple timings and special pujas</li>
+              <li>Cultural programs and classes</li>
+              <li>Community news and volunteer opportunities</li>
+            </ul>
+            <p style="margin-top:12px"><strong>Send us your email address to subscribe.</strong></p>
+          </div>
         </div>
       </div>
     </div>
@@ -91,17 +137,20 @@
           <img src="assets/img/logo.png" alt="AHA logo small"><span>AHA Shiva Vishnu Temple</span>
         </div>
         <p>Hindu Temple & Cultural Center • Fitchburg, Wisconsin</p>
+        <p style="margin-top:12px"><strong>Temple Priest:</strong> Pt. Sudhakar Sharma</p>
       </div>
       <div>
         <h4>Visit</h4>
         <p class="muted">2138 S Fish Hatchery Rd<br>Fitchburg, WI 53575</p>
+        <p class="muted" style="margin-top:8px"><strong>Hours:</strong> Mon-Tue, Thu-Fri 9AM-12PM & 5PM-8PM<br>Sat-Sun 9AM-1PM & 5PM-8PM<br>Closed Wednesdays</p>
       </div>
       <div>
         <h4>Connect</h4>
-        <p class="muted">(608) 571‑5856 • contact.aha@aha-svtemple.org<br>Facebook: @ahamadison</p>
+        <p class="muted">(608) 571‑5856<br>contact.aha@aha-svtemple.org</p>
+        <p class="muted" style="margin-top:8px"><a href="https://www.facebook.com/ahamadison" target="_blank" rel="noopener" style="color:inherit;text-decoration:underline">Facebook: @ahamadison</a></p>
       </div>
     </div>
-    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA)</div>
+    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA) • Website Designed by Ms. Narisha Reddy</div>
   </footer>
 
   <script src="assets/js/main.js"></script>
