--- a/aha-svtemple-final/events.html
+++ b/aha-svtemple-final/events.html
@@ -27,7 +27,6 @@
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="darshan.html">Darshan</a></li>
           <li><a href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
           <li><a class="active" href="events.html">Events</a></li>
@@ -41,7 +40,6 @@
       <nav style="background:#fff;border:1px solid var(--line);border-radius:16px;padding:8px;box-shadow:var(--shadow);margin-bottom:10px">
         <ul style="list-style:none;margin:0;padding:0;display:grid;gap:6px">
           <li><a class="btn" href="index.html">Home</a></li>
-          <li><a class="btn" href="darshan.html">Darshan</a></li>
           <li><a class="btn" href="puja.html">Puja & Sevas</a></li>
           <li><a class="btn" href="timings.html">Timings</a></li>
           <li><a class="btn" href="events.html">Events</a></li>
@@ -65,9 +63,20 @@
         <div class="card"><span class="pill">Diwali</span><h3>Festival of Lights</h3><p>Lakshmi puja, diyas lighting, and community gathering. Celebrate the victory of light over darkness with prayers, sweets, and festivities.</p></div>
         <div class="card"><span class="pill">Community Programs</span><h3>Cultural Classes & Events</h3><p>Regular yoga classes, Sanskrit learning, classical music and dance workshops for children and adults. Check with the temple for current schedule.</p></div>
       </div>
+
+
       <div class="cta" style="margin-top:32px">
         <a class="btn brand" href="contact.html">Stay Updated</a>
         <a class="btn" href="puja.html">Sponsor Festival Puja</a>
+      </div>
+      <div id="flyers" style="margin-top:48px">
+        <div class="section-header"><h2>Upcoming Event Flyers</h2></div>
+        <p class="section-intro">View and download flyers for our upcoming festivals, pujas, and community programs. Click to enlarge or save.</p>
+        <div class="flyer-gallery" style="display:flex;justify-content:center;align-items:center;margin-top:32px">
+          <a href="assets/img/2025Shivarathri.jpg" target="_blank" style="display:block;max-width:600px;width:100%">
+            <img src="assets/img/2025Shivarathri.jpg" alt="2025 Maha Shivarathri Event Flyer" style="width:100%;height:auto;max-width:600px;display:block;margin:0 auto;border-radius:16px;box-shadow:0 4px 24px #0002">
+          </a>
+        </div>
       </div>
     </div>
   </section>
@@ -79,17 +88,20 @@
           <img src="assets/img/logo.png" alt="AHA logo small"><span>AHA Shiva Vishnu Temple</span>
         </div>
         <p>Hindu Temple & Cultural Center • Fitchburg, Wisconsin</p>
+        <p style="margin-top:12px"><strong>Temple Priest:</strong> Pt. Sudhakar Sharma</p>
       </div>
       <div>
         <h4>Visit</h4>
         <p class="muted">2138 S Fish Hatchery Rd<br>Fitchburg, WI 53575</p>
+        <p class="muted" style="margin-top:8px"><strong>Hours:</strong> Mon-Tue, Thu-Fri 9AM-12PM & 5PM-8PM<br>Sat-Sun 9AM-1PM & 5PM-8PM<br>Closed Wednesdays</p>
       </div>
       <div>
         <h4>Connect</h4>
-        <p class="muted">(608) 571‑5856 • contact.aha@aha-svtemple.org<br>Facebook: @ahamadison</p>
+        <p class="muted">(608) 571‑5856<br>contact.aha@aha-svtemple.org</p>
+        <p class="muted" style="margin-top:8px"><a href="https://www.facebook.com/ahamadison" target="_blank" rel="noopener" style="color:inherit;text-decoration:underline">Facebook: @ahamadison</a></p>
       </div>
     </div>
-    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA)</div>
+    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA) • Website Designed by Ms. Narisha Reddy</div>
   </footer>
 
   <script src="assets/js/main.js"></script>
