--- a/aha-svtemple-final/puja.html
+++ b/aha-svtemple-final/puja.html
@@ -27,7 +27,6 @@
         <button class="btn menu" id="menuBtn" aria-expanded="false" aria-controls="mobileNav">Menu</button>
         <ul id="desktopNav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="darshan.html">Darshan</a></li>
           <li><a class="active" href="puja.html">Puja & Sevas</a></li>
           <li><a href="timings.html">Timings</a></li>
           <li><a href="events.html">Events</a></li>
@@ -41,7 +40,6 @@
       <nav style="background:#fff;border:1px solid var(--line);border-radius:16px;padding:8px;box-shadow:var(--shadow);margin-bottom:10px">
         <ul style="list-style:none;margin:0;padding:0;display:grid;gap:6px">
           <li><a class="btn" href="index.html">Home</a></li>
-          <li><a class="btn" href="darshan.html">Darshan</a></li>
           <li><a class="btn" href="puja.html">Puja & Sevas</a></li>
           <li><a class="btn" href="timings.html">Timings</a></li>
           <li><a class="btn" href="events.html">Events</a></li>
@@ -56,12 +54,50 @@
   <section id="puja">
     <div class="container">
       <div class="section-header"><h2>Puja & Sevas</h2><a class="btn brand" href="donate.html">Sponsor</a></div>
-      <p class="section-intro">Participate in daily and special pujas at the temple. Contact us to schedule your seva or for priest services.</p>
+      <p class="section-intro">Participate in daily and special pujas at the temple. Contact us to schedule your seva or for priest services. Our temple priest, Pt. Sudhakar Sharma, conducts all pujas with proper Vedic rituals.</p>
       <div class="cards">
         <div class="card"><span class="pill">Abhishekam</span><h3>Monthly Abhishekams</h3><p>Sponsor abhishekams for Shiva, Vishnu and Parivar deities. Monthly abhishekams are performed with sacred waters, milk, honey, and other sacred items while chanting vedic mantras.</p></div>
         <div class="card"><span class="pill">Archana</span><h3>Daily/Weekly Archana</h3><p>Offer archana for special days, birthdays and anniversaries. Archanas can be performed in person or on your behalf with 108 or 1008 names of the deity.</p></div>
         <div class="card"><span class="pill">Priest Services</span><h3>Private Puja / Weddings</h3><p>Priest services at the temple or your home for samskaras, homams, grihapravesham, weddings, etc. Contact us to discuss your requirements and schedule.</p></div>
       </div>
+
+      <div style="margin-top:48px">
+        <h2 style="margin-bottom:24px">Special Puja Sponsorships</h2>
+        <div class="cards">
+          <div class="card">
+            <span class="pill">Festival Puja</span>
+            <h3>Maha Shivarathri Sponsorship</h3>
+            <p>Sponsor the all-night Maha Shivarathri celebration including Shiva Parvathi Kalyanam. Multiple kala pujas, special abhishekams, and elaborate decorations.</p>
+            <a class="btn brand" href="contact.html">Register to Sponsor</a>
+          </div>
+          <div class="card">
+            <span class="pill">Annual Puja</span>
+            <h3>Annual Abhishekam & Puja Sponsorship</h3>
+            <p>Sign up for annual sponsorship of regular temple pujas and abhishekams. Your name will be included in daily temple prayers throughout the year.</p>
+            <a class="btn brand" href="contact.html">Register for Annual</a>
+          </div>
+          <div class="card">
+            <span class="pill">Regular Puja</span>
+            <h3>Sponsor Regular Temple Puja</h3>
+            <p>Participate in regular temple pujas through online registration. Sponsor daily or weekly pujas for health, prosperity, and peace.</p>
+            <a class="btn brand" href="contact.html">Register Online</a>
+          </div>
+        </div>
+      </div>
+
+      <div style="margin-top:48px;padding:24px;background:var(--off);border-radius:16px">
+        <h3 style="margin-bottom:12px">📋 Puja Items Available at Temple</h3>
+        <p style="margin-bottom:12px">The temple office offers a variety of puja items including:</p>
+        <ul style="padding-left:20px;margin-bottom:12px">
+          <li>Fresh flowers and garlands</li>
+          <li>Prasadam and blessed items</li>
+          <li>Puja samagri (camphor, incense, kumkum, turmeric)</li>
+          <li>Religious books and calendar</li>
+          <li>Deity pictures and frames</li>
+        </ul>
+        <a class="btn" href="contact.html">Request Detailed Items List</a>
+      </div>
+
       <div class="cta" style="margin-top:32px">
         <a class="btn brand" href="contact.html">Contact Us</a>
         <a class="btn" href="donate.html">Make a Donation</a>
@@ -76,17 +112,20 @@
           <img src="assets/img/logo.png" alt="AHA logo small"><span>AHA Shiva Vishnu Temple</span>
         </div>
         <p>Hindu Temple & Cultural Center • Fitchburg, Wisconsin</p>
+        <p style="margin-top:12px"><strong>Temple Priest:</strong> Pt. Sudhakar Sharma</p>
       </div>
       <div>
         <h4>Visit</h4>
         <p class="muted">2138 S Fish Hatchery Rd<br>Fitchburg, WI 53575</p>
+        <p class="muted" style="margin-top:8px"><strong>Hours:</strong> Mon-Tue, Thu-Fri 9AM-12PM & 5PM-8PM<br>Sat-Sun 9AM-1PM & 5PM-8PM<br>Closed Wednesdays</p>
       </div>
       <div>
         <h4>Connect</h4>
-        <p class="muted">(608) 571‑5856 • contact.aha@aha-svtemple.org<br>Facebook: @ahamadison</p>
+        <p class="muted">(608) 571‑5856<br>contact.aha@aha-svtemple.org</p>
+        <p class="muted" style="margin-top:8px"><a href="https://www.facebook.com/ahamadison" target="_blank" rel="noopener" style="color:inherit;text-decoration:underline">Facebook: @ahamadison</a></p>
       </div>
     </div>
-    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA)</div>
+    <div class="copyright">© <span id="year"></span> American Hindu Association (AHA) • Website Designed by Ms. Narisha Reddy</div>
   </footer>
 
   <script src="assets/js/main.js"></script>
